--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,9 +21,9 @@ jobs:
       with:
         java-version: 1.8
     - name: Build CORE with Maven
-      run: mvn -f MAFAutomation_MAF-Application-Core/pom.xml -DBranch=main clean install && exit
+      run: mvn -f MAFAutomation_MAF-Application-Core/pom.xml -DBranch=main clean install
     - name: Build TESTDATA with Maven
-      run: mvn -f MAFAutomation_MAF-Application-Testdata/pom.xml -DBranch=main clean install && exit
+      run: mvn -f MAFAutomation_MAF-Application-Testdata/pom.xml -DBranch=main clean install
     - name: Build TEST with Maven
-      run: mvn -f MAFAutomation_CHP-Application-Test/pom.xml -DBranch=main -DRegressionPath=TestNGTestScripts/chpmex_qc_Regression.xml clean install && exit
+      run: mvn -f MAFAutomation_CHP-Application-Test/pom.xml -DBranch=main -DRegressionPath=TestNGTestScripts/chpmex_qc_Regression.xml clean install
       
