--- a/MAFAutomation_CHP-Application-Test/pom.xml
+++ b/MAFAutomation_CHP-Application-Test/pom.xml
@@ -130,10 +130,10 @@
 					<inherited>true</inherited>
 					<executions>
 						<execution>
-							<id>default-clean</id>
-							<phase>clean</phase>
+							<id>default-test</id>
+							<phase>test</phase>
 							<goals>
-								<goal>clean</goal>
+								<goal>test</goal>
 							</goals>
 						</execution>
 					</executions>
