--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,6 +20,11 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+   
+    - name: Build CORE with Maven
+      run: mvn -f MAFAutomation_MAF-Application-Core/pom.xml -DBranch=main clean install
+    - name: Build TESTDATA with Maven
+      run: mvn -f MAFAutomation_MAF-Application-Testdata/pom.xml -DBranch=main clean install
     - name: Build TEST with Maven
       run: mvn -f MAFAutomation_CHP-Application-Test/pom.xml test
       
