--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
 
-    runs-on: windows-latest
+    runs-on: self-hosted
 
     steps:
     - uses: actions/checkout@v2
@@ -29,5 +29,5 @@ jobs:
     - name: Build TESTDATA with Maven
       run: mvn -f MAFAutomation_MAF-Application-Testdata/pom.xml -DBranch=main clean install
     - name: Build TEST with Maven
-      run: mvn -f MAFAutomation_CHP-Application-Test/pom.xml clean install
+      run: mvn -f MAFAutomation_CHP-Application-Test/pom.xml test
       
