--- a/MAFAutomation_MAF-Application-Core/pom.xml
+++ b/MAFAutomation_MAF-Application-Core/pom.xml
@@ -187,7 +187,7 @@
 						</execution>
 					</executions>
 					<configuration>
-						<excludeDefaultDirectories>true</excludeDefaultDirectories>
+						<excludeDefaultDirectories>false</excludeDefaultDirectories>
 						<filesets>
 							<fileset>
 								<directory>target/</directory>
